# json2unique

./: .gitignore  README.md  pyproject.toml
src/json2unique/: __init__.py  __main__.py  context_manager.py  parser.py
tests/: array.json  basic.json  middle_object.json  nested_array.json  nested_object.json  test_common.py  test_depth.py
